# options-income-advisor

./: .env.example  .gitignore  CLAUDE.md  NOTES.md  README.md  pyproject.toml
.streamlit/: config.toml
config/: logging.yaml  settings.yaml  symbols.yaml  universe_sp500.yaml  watchlist_thinkorswim.yaml
data/fixtures/iv_history/: AAPL.csv  AMZN.csv  GOOGL.csv  IWM.csv  JNJ.csv  JPM.csv  KO.csv  META.csv  MSFT.csv  NVDA.csv  PG.csv  QQQ.csv  SPY.csv
data/fixtures/option_chains/: AAPL.json  AMZN.json  GOOGL.json  IWM.json  JNJ.json  JPM.json  KO.json  META.json  MSFT.json  NVDA.json  PG.json  QQQ.json  SPY.json
data/fixtures/price_history/: AAPL.csv  AMZN.csv  GOOGL.csv  IWM.csv  JNJ.csv  JPM.csv  KO.csv  (+6 more)
scripts/: run_scheduler.py  schwab_login.py  seed_fixtures.py  verify_schwab_client.py
src/options_advisor/: config.py
tests/: conftest.py  test_e2e_pipeline.py
tests/test_alerts/: test_dedup.py  test_digest.py  test_formatting.py  test_narrator.py  test_notifier.py  test_risk_calendar.py
tests/test_broker/: test_mock_client.py  test_schwab_client.py
tests/test_dashboard/: test_news_relevance.py  test_portfolio_analysis.py  test_portfolio_summary.py  test_risk_calendar.py
tests/test_indicators/: test_gex.py  test_levels.py  test_technical.py  test_volatility.py
tests/test_market_context/: test_economic_calendar.py  test_finnhub_client.py  test_fred_client.py  test_kalshi_client.py
tests/test_scheduler/: test_jobs.py
tests/test_storage/: test_repository.py
tests/test_strategy/: test_candidates.py  test_payoff.py  test_scoring.py  test_selector.py
(+49 files in other folders)
