[project]
name = "options-income-advisor"
version = "0.1.0"
description = "Motor de análisis y alertas de opciones para el escenario de Ingreso a Largo Plazo (Fase 1)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "py_vollib>=1.0.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "APScheduler>=3.10",
    "pandas_market_calendars>=4.4",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "streamlit>=1.35",
    "plotly>=5.22",
    "anthropic>=0.34",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
